# qrcode-rust

./: .travis.yml  Cargo.toml  LICENSE-MIT.txt  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: encode_image.rs  encode_string.rs  encode_svg.rs
src/: bits.rs  canvas.rs  lib.rs  optimize.rs  types.rs
src/render/: svg.rs
