[package]
name = "qrencode"
description = "QR code encoder in Rust"
license = "MIT OR Apache-2.0"
version = "0.14.0"
edition = "2021"
authors = ["kennytm <kennytm@gmail.com>", "Arijit Basu <sayanarijit@gmail.com>"]
keywords = ["qrcode"]
repository = "https://github.com/sayanarijit/qrencode"
readme = "README.md"
documentation = "http://docs.rs/qrencode"
exclude = [
    ".travis.yml", ".gitignore", "test-data/**"
]

[dependencies]
image = { version = "0.24.5", default-features = false, optional = true }
checked_int_cast = "1.0.0"

[dev-dependencies]
image = "0.24.5"

[features]
default = ["image", "svg"]
bench = []
svg = []

[[bin]]
name = "qrencode"

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]
